--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,13 +1,39 @@
 <ion-header [translucent]="true">
-  <ion-toolbar color ="primary">
+  <ion-toolbar color ="success">
     <ion-title>Login</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  
+  <!--imagen del logo-->
+    <div class="logo-container">
+      <img src="../../assets/img/libreria.png" alt="Logo" class="logo">
+    </div>
+
+<ion-card>
+    <ion-card-header>
+      <ion-card-title>Mi Libreria App</ion-card-title> 
+    </ion-card-header>
+
+      <ion-card-content>
+
+        <ion-item>
+          <ion-label position="floating">Usuario</ion-label>
+          <ion-input type="text"></ion-input>
+        </ion-item>
+
+        <ion-item>
+        <ion-label position="floating">Contraseña</ion-label>
+        <ion-input type="password"></ion-input>
+        </ion-item>
+          <ion-button expand="block">Iniciar Sesión</ion-button>
+
+      
+      </ion-card-content>
+
+
+</ion-card>
+
 </ion-content>
+  
