--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -20,15 +20,15 @@
 
         <ion-item>
           <ion-label position="floating">Usuario</ion-label>
-          <ion-input type="text"></ion-input>
+          <ion-input [(ngModel)]="email" type="text"></ion-input>
         </ion-item>
 
         <ion-item>
         <ion-label position="floating">Contraseña</ion-label>
-        <ion-input type="password"></ion-input>
+        <ion-input [(ngModel)]="password" type="password"></ion-input>
         </ion-item>
 
-        <ion-button expand="block">Iniciar Sesión</ion-button>
+        <ion-button expand="block" (click)="login()">Iniciar Sesión</ion-button>
 
       
       </ion-card-content>
