--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,11 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="success">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+
     <ion-title>
-      <ion-title>Bienvenido {{ user }}</ion-title>
+      Bienvenido {{ user }}
     </ion-title>
   </ion-toolbar>
 </ion-header>
