--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -2,6 +2,7 @@
   <ion-toolbar color="success">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
+      <!--<ion-back-button></ion-back-button>-->
     </ion-buttons>
 
     <ion-title>
