--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,4 +1,13 @@
 
+ion-content {
+    --background: none;
+    /* Elimina cualquier fondo global */
+    background-image: url('../../../assets/img/fondo.png');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+}
+
 .logo-container{
     display: flex;
     justify-content: center;
@@ -21,8 +30,10 @@
     }
 }
 
+
+
 ion-card {
- background: #0c6a47;
+ background: #cd90c6;
  border-radius: 10px;
  box-shadow: 0 2px 10px rgba(0,0,0,0.2);
 }
@@ -39,7 +50,7 @@ ion-input {
     --padding-star: 10px;
 }
 
-ion-button {
+ion-button.login-button {
     --background: #007bff;
     --color: #fff;
     --border-radius: 20px;
@@ -47,7 +58,34 @@ ion-button {
     margin-top:1rem;
 }
 
+ion-button.register-button {
+    --background: transparent;/* Fondo transparente */
+    --color: #fff;/* Texto blanco */
+    --border-radius: 20px;
+    --box-shadow: none; /* Sin sombra */
+    --border: 1px solid #fff;/* Borde blanco para visibilidad */
+    margin-top: 1rem;
+}
+
 
 ion-button:hover {
  --background: #0056b3;
 }
+
+.forgot-password {
+    display: block;
+    text-align: center;
+    margin-top: 1rem;
+}
+
+.forgot-link {
+    color: var(--ion-color-medium);
+    text-decoration: none;
+    font-size: 0.9rem;
+}
+
+.forgot-link:hover {
+    text-decoration: underline;
+    color: #111011; /* color al pasar el mouse */
+}
+
