Cambio del menú

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,12 +7,13 @@
     </ion-buttons>
 
     <ion-title>
-      <img src="../../../assets/img/usuario.png" alt="Avatar de usuario" class="user-avatar" />
+    <img src="../../../assets/img/usuario.png" alt="Avatar de usuario" class="user-avatar" />
       Bienvenido {{ user }}
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
+  <h2>¡Libros disponibles!</h2>
 
 <ion-content>
   <mat-card *ngFor="let libro of libros" class="mat-elevation-z4 libro-card">
