--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -85,7 +85,7 @@ ion-button:hover {
 }
 
 .forgot-link:hover {
-    text-decoration: underline;
+    text-decoration: #f9f6f6;
     color: #111011; /* color al pasar el mouse */
 }
 
