--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,27 @@
       <ion-list>
         <ion-item routerLink="/home" routerDirection="root">
           <ion-icon name="home-outline" slot="start"></ion-icon>
-          <ion-label>Inicio</ion-label>
+          <ion-label>Home</ion-label>
         </ion-item>
+
+        <!--registro-->
+        <ion-item routerLink="/registro" routerDirection="root">
+          <ion-icon name="person-add-outline" slot="start"></ion-icon>
+          <ion-label>Mi perfil</ion-label>
+        </ion-item>
+
+        <!--pago-->
+        <ion-item routerLink="/pago" routerDirection="root">
+          <ion-icon name="card-outline" slot="start"></ion-icon>
+          <ion-label>Pago por compra</ion-label>
+        </ion-item>
+
+        <!--cierre sesion-->
+        <ion-item routerLink="/cerrarSesion" routerDirection="root">
+          <ion-icon name="log-out-outline" slot="start"></ion-icon>
+          <ion-label>Cierre sesión</ion-label>
+        </ion-item>
+
       </ion-list>
     </ion-content>
   </ion-menu>
