--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,9 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
+
+ion-app,
+ion-content{
+    --background: url('../src/assets/img/fondo.png') no-repeat center / cover;
+
+}
