--- a/src/global.scss
+++ b/src/global.scss
@@ -28,7 +28,6 @@
 /**
  * Ionic Dark Mode
  * -----------------------------------------------------
- * For more info, please see:
  * https://ionicframework.com/docs/theming/dark-mode
  */
 
@@ -36,8 +35,11 @@
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
 
+
 ion-app,
 ion-content{
     --background: url('../src/assets/img/fondo.png') no-repeat center / cover;
 
 }
+
+/*@import "@angular/materual/prebuil-themes/indigo-pink.css";*/
