--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,8 +1,8 @@
-<ion-header [translucent]="true">
-  <ion-toolbar color ="success">
+<!--<ion-header [translucent]="true">
+ <ion-toolbar color ="success">
     <ion-title>Login</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header>-->
 
 <ion-content [fullscreen]="true">
   
@@ -12,14 +12,15 @@
     </div>
 
 <ion-card>
-    <ion-card-header>
-      <ion-card-title>Mi Libreria App</ion-card-title> 
-    </ion-card-header>
+    
+
+    <ion-card-title class="titulo-libreria">Mi Librería App</ion-card-title>
+
 
       <ion-card-content>
 
         <ion-item>
-          <ion-label position="floating">Usuario</ion-label>
+          <ion-label position="floating">Email</ion-label>
           <ion-input [(ngModel)]="email" type="text"></ion-input>
         </ion-item>
 
@@ -35,10 +36,18 @@
       </ion-card-content>
 
       <ion-text class="forgot-password" color="medium">
-        <a href="#" class="forgot-link">¿Olvidaste tu contraseña?</a></ion-text>
+        <a href="#" class="forgot-link">¿Olvidaste tu contraseña?</a>
+      </ion-text>
 
 
 </ion-card>
 
+      <!--imagen del logo2-->
+      <div class="logo-container">
+        <img src="../../assets/img/logo2.png" alt="Logo" class="logo2">
+      </div>
+
+
 </ion-content>
   
+ 
