--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -8,7 +8,7 @@
   
   <!--imagen del logo-->
     <div class="logo-container">
-      <img src="../../assets/img/libreria.png" alt="Logo" class="logo">
+      <img src="../../../assets/img/libreria.png" alt="Logo" class="logo">
     </div>
 
 <ion-card>
