--- a/src/app/pages/registro/registro.page.html
+++ b/src/app/pages/registro/registro.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <app-company-name [companyname]="'Mi Librería App'"></app-company-name>
+    <!--<app-company-name [companyName]="'Mi Librería App'"></app-company-name>-->
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/home"></ion-back-button>
     </ion-buttons>
