--- a/src/global.scss
+++ b/src/global.scss
@@ -42,4 +42,8 @@ ion-content{
 
 }
 
-/*@import "@angular/materual/prebuil-themes/indigo-pink.css";*/
+ /**
+ * Angular Material
+ **/
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
