--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,12 @@
           <ion-label>Productos</ion-label>
         </ion-item>
 
+        <!-- pago producto -->
+        <ion-item button (click)="goToPago()">
+          <ion-icon name="card-outline" slot="start"></ion-icon>
+          <ion-label>Pagar producto</ion-label>
+        </ion-item>
+
 
         <!--cierre sesion-->
         <ion-item button (click)="cerrarSesion()">
