--- a/src/app/pages/registro/registro.page.scss
+++ b/src/app/pages/registro/registro.page.scss
@@ -49,7 +49,7 @@ ion-card ion-input {
     --background: transparent;
     /* Fondo transparente */
     color: rgb(10, 1, 5);
-    /* Color de texto en naranja oscuro */
+    /* Color de texto oscuro */
 }
 
 ion-card input {
